MDEV-22810 mariabackup does not honor open_files_limit from option during backup prepare

open_files_limit option was processed only for --backup, but not for
--prepare.